kubernetes/01-postgres.yml
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: postgres

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: textrepo
        - name: POSTGRES_HOST
          value: postgres.textrepo
        - name: POSTGRES_PASSWORD
          value: textrepo
        - name: POSTGRES_PORT
          value: textrepo
        - name: POSTGRES_USER
          value: textrepo
        image: knawhuc/textrepo-postgres:latest
        name: postgres
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
      restartPolicy: Always
