kubernetes/02-elasticsearch.yml
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    textrepo.service: elasticsearch
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  selector:
    textrepo.service: elasticsearch

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    textrepo.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        textrepo.service: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: "-Xms750m -Xmx750m"
        # TODO:
        # To prevent the following error: 'memory locking requested for elasticsearch process but memory is not locked'
        # we have to set bootstrap.memory_lock=false
        # but I guess it should be alowed: www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html#bootstrap-memory_lock
        # so how to set `kube-apiserver --allow-privileged`?
        - name: bootstrap.memory_lock
          value: "false"
        - name: cluster.initial_master_nodes
          value: es01
        - name: cluster.name
          value: textrepo-cluster
        - name: node.name
          value: es01
        image: docker.elastic.co/elasticsearch/elasticsearch:7.3.0
        name: elasticsearch
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: esdata
        resources:
          limits:
            cpu: 200m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 1Gi
      restartPolicy: Always
      volumes:
      - name: esdata
        persistentVolumeClaim:
          claimName: esdata
