kubernetes/04-nginx.yml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: nginx

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: knawhuc/textrepo-nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
      restartPolicy: Always
