kubernetes/05-concordion.yml
---
apiVersion: v1
kind: Service
metadata:
  name: concordion
  labels:
    textrepo.service: concordion
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    textrepo.service: concordion

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: concordion
  labels:
    textrepo.service: concordion
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        textrepo.service: concordion
    spec:
      containers:
      - args:
        - /scripts/wait-for-it.sh
        - textrepo-app:8080
        - --timeout=0
        - --
        - mvn
        - clean
        - test
        image: knawhuc/textrepo-concordion
        imagePullPolicy: Always
        name: concordion
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi

---
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: concordion-network-policy
spec:
  podSelector:
    matchLabels:
      textrepo.service: concordion
  policyTypes:
  - Egress
  egress:
  - {}
